<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.rutina_frecuencia"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="@dimen/textoTitulo"
                android:textColor="@color/colorBackground"
                android:layout_marginTop="10dp"/>
            <ImageButton
                android:id="@+id/btnFrecuencia_Perfil"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="24dp"
                android:background="@color/colorPrimaryDark"
                android:scaleType="fitXY"
                android:src="@drawable/perfil_icon"
                android:contentDescription="@string/perfil"
                android:layout_marginStart="24dp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/txtFrecuencia_Config"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/configuracion"
            android:textSize="@dimen/textoTitulo"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/dias"
            android:textSize="@dimen/textoSubtitulo"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textStart"
            android:gravity="start"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/domingo"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/domingo"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/lunes"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lunes"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/martes"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/martes"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/miercoles"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/miercoles"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/jueves"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/jueves"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/viernes"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/viernes"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/sabado"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/sabado"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginVertical="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="60dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/meta"
                android:textSize="@dimen/textoSubtitulo"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="textStart"
                android:gravity="start"/>
            <EditText
                android:id="@+id/txtFrecuencia_Meta"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="0"
                />
            <TextView
                android:layout_width="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/dias"
                android:textSize="@dimen/textoSubtitulo"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="textStart"
                android:gravity="start"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        >
        <CheckBox
            android:id="@+id/chkFrecuencia_Recordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/recordar"
            android:textSize="@dimen/textoSubtitulo"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textStart"
            android:gravity="start"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFrecuencia_Guardar"
                android:layout_width="164dp"
                android:layout_height="43dp"
                android:background="@color/colorPrimary"
                android:text="@string/guardar_cambios"
                android:textColor="@color/colorBackground"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>