<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.fragments.registro">

    <ImageView
        android:id="@+id/imgRegistro_Logo"
        android:layout_width="133dp"
        android:layout_height="170dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/logo_de_root_in"
        android:src="@drawable/r_icon_w"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegistro_Nombre"
        android:layout_width="313dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:autofillHints="Nombre"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Bienvenido" />

    <EditText
        android:id="@+id/txtRegistro_Apellido"
        android:layout_width="317dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:autofillHints="Apellido"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Nombre" />

    <EditText
        android:id="@+id/txtRegistro_Telefono"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:autofillHints="Teléfono"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Contra" />

    <EditText
        android:id="@+id/txtRegistro_Correo"
        android:layout_width="320dp"
        android:layout_height="36dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:autofillHints="Correo Electrónico"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Apellido" />

    <EditText
        android:id="@+id/txtRegistro_Contra"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:autofillHints="Contraseña"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Correo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="318dp"
        android:layout_height="4dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Nombre" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="5dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Telefono" />

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="4dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Contra" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="318dp"
        android:layout_height="4dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Correo" />

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="4dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@color/colorBackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Apellido" />


    <TextView
        android:id="@+id/txtRegistro_Bienvenido"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgRegistro_Logo" />

    <Button
        android:id="@+id/btnRegistro_Registrar"
        android:layout_width="212dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="84dp"
        android:background="@color/colorBackground"
        android:text="@string/registrarme"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro_Telefono"
        app:layout_constraintVertical_bias="0.192" />


</androidx.constraintlayout.widget.ConstraintLayout>