<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.rutina_nueva"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="@dimen/textoTitulo"
                android:textColor="@color/colorBackground"
                android:layout_marginTop="10dp"/>
            <ImageButton
                android:id="@+id/btnRutNew_Perfil"
                android:layout_width="@dimen/iconoTamanio"
                android:layout_height="@dimen/iconoTamanio"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="24dp"
                android:background="@color/colorPrimaryDark"
                android:scaleType="fitXY"
                android:src="@drawable/perfil_icon"
                android:contentDescription="@string/perfil"
                android:layout_marginStart="24dp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorBackground"
        app:cardCornerRadius="@dimen/radioEsquina"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textoSubtitulo"
                android:layout_marginTop="@dimen/textoSubtitulo"
                android:layout_marginRight="@dimen/textoSubtitulo"
                android:layout_marginBottom="@dimen/textoSubtitulo"
                android:gravity="center_horizontal"
                android:text="@string/nueva_rutina"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textoTitulo"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtRutNew_Nombre"
                android:layout_width="313dp"
                android:layout_height="38dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="@dimen/textoSubtitulo"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorBackground"
                android:ems="10"
                android:hint="@string/titulo"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@android:color/background_light"
                android:textColorLink="@android:color/background_light"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:autofillHints="Título" />

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="@dimen/textoSubtitulo"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="44dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRutNew_AgregarRutina"
        android:layout_width="193dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/agregar_nueva_rutina"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>